Edite path files

--- a/index.html
+++ b/index.html
@@ -5,12 +5,12 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>MDN Studing Document</title>
-        <link rel="stylesheet" href="css/style.css" />
+        <link rel="stylesheet" href="style.css" />
     </head>
     <body>
         <section class="body">
             <section class="container">
-                <img src="images/person-blue-shirt.png" alt="subscribe" />
+                <img src="person-blue-shirt.png" alt="subscribe" />
                 <h1>Genues School</h1>
                 <p>Full Stack Developer</p>
                 <hr />
